Closed Bug 763039 Opened 13 years ago Closed 13 years ago

IonMonkey: Assertion failure: *ptr == 0xE9, at ../ion/shared/Assembler-x86-shared.h:1164

Categories

(Core :: JavaScript Engine, defect)

Other Branch
x86
Linux
defect
Not set
major

Tracking

()

RESOLVED FIXED

People

(Reporter: decoder, Assigned: sstangl)

References

Details

(Keywords: assertion, testcase, Whiteboard: [jsbugmon:update])

Attachments

(2 files)

Attached file Testcase for shell
The attached testcase asserts on ionmonkey revision 5cfb73435e06 (run with --ion -n -m --ion-eager).
Assignee: general → sstangl
Attached patch patchSplinter Review
IGC started after the toggledJump was emitted. Fix is to always emit barriers as disabled, then enable at the very end of compilation. Further GC action will then correctly toggle the script's barriers, since it will be reachable from a JSScript.
Attachment #631538 - Flags: review?(dvander)
Attachment #631538 - Flags: review?(dvander) → review+
Status: NEW → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Automatically extracted testcase for this bug was committed: https://hg.mozilla.org/mozilla-central/rev/2e891e0db397
Flags: in-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: