Bug 763039 - Toggle barrier jumps to correct state at end of compilation. r=dvander